--- a/calico-cloud_versioned_docs/version-3.16/visibility/elastic/flow/datatypes.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/visibility/elastic/flow/datatypes.mdx
@@ -78,7 +78,8 @@ Where,
 
 * `<index>` numbers the order in which the rules were hit, starting with `0`.
   :::tip
-  Sort the entries of the list by the `<index>` to see the order that rules were hit.
+  Sort the entries of the list by the `<index>` to see the order that rules were hit.  The entries are displayed in
+  random order due to the way they are stored in the datastore.
   :::
 
 * `<tier name>` is the name of the policy tier containing the policy, or `__PROFILE__` for a rule derived from a
@@ -87,7 +88,7 @@ Where,
 * `<policy name>` is the name of the policy/profile; its format depends on the type of policy:
 
   * `<tier>.<name>` for {{prodname}} `GlobalNetworkPolicy`.
-  * `<namespace>/<name>` for Kubernetes `NetworkPolicy`.
+  * `<namespace>/knp.default.<name>` for Kubernetes `NetworkPolicy`.
   * `<namespace>/<tier>.<name>` for {{prodname}} `NetworkPolicy`.
 
   Staged policy names are prefixed with "staged:".
@@ -96,6 +97,7 @@ Where,
 * `<rule index>` if non-negative, is the index of the rule that was matched within the policy, starting with 0.
   Otherwise, a special value:
 
-  * `-1` means that the flow didn't match any policy. It hit the default action for the tier.  In this case, the
-    policy name is an arbitrary policy that was active for the endpoint.
+  * `-1` means the reporting endpoint was selected by the policy but no rule matched.  The traffic hit the default
+    action for the tier.  In this case, the `<policy name>` is selected arbitrarily from the set of policies within
+    the tier that apply to the endpoint.
   * `-2` means "unknown". The rule index was not recorded.
