--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-on-prem.mdx
@@ -300,6 +300,10 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: status.podIP
+        # Optional: Used to specify IP tables backend (legacy or nft).
+        # For example on RHEL9, nft can be used.
+        #- name: IPTABLES_BACKEND
+        #  value: "legacy"
         securityContext:
           privileged: true
       containers:
@@ -388,6 +392,8 @@ Where:
   If set, the egress gateway pod will probe each external service periodically. If all probes fail then the egress
   gateway will report non-ready via its health port. `HTTP_PROBE_INTERVAL` controls the interval between probes.
   `HTTP_PROBE_TIMEOUT` controls the timeout before reporting non-ready if all probes are failing.
+
+- The `IPTABLES_BACKEND` environment variable may be set to `legacy` or `nft`.
 
 The health port is used by:
 
