--- a/calico_versioned_docs/version-3.25/operations/calicoctl/install.mdx
+++ b/calico_versioned_docs/version-3.25/operations/calicoctl/install.mdx
@@ -315,7 +315,7 @@ Make sure you always install the version of `calicoctl` that matches the version
 
    :::
 
-<CodeBlock>Invoke-WebRequest -Uri "{url}/calicoctl-windows-amd64.exe -OutFile kubectl-calico.exe</CodeBlock>
+<CodeBlock>Invoke-WebRequest -Uri "{url}/calicoctl-windows-amd64.exe" -OutFile kubectl-calico.exe</CodeBlock>
 
 </TabItem>
 <TabItem label="Linux PPC64le" value="Linux PPC64le-8">
