Fixed liquid syntax in Openshift install page

--- a/calico_versioned_docs/version-3.25/getting-started/kubernetes/openshift/installation.mdx
+++ b/calico_versioned_docs/version-3.25/getting-started/kubernetes/openshift/installation.mdx
@@ -142,8 +142,6 @@ EOF
 ```
 
 Next, you will create a Subscription to the operator. By subscribing to the operator package, the {{prodname}} operator will be managed by OLM.
-{% assign operator_version = tigeraOperator.version %}
-{% assign operator_version_parts = operator_version | split: "." %}
 
 ```bash
 oc apply -f - <<EOF
@@ -153,12 +151,12 @@ metadata:
   name: tigera-operator
   namespace: tigera-operator
 spec:
-  channel: release-{{operator_version_parts[0]}}.{{operator_version_parts[1]}}
+  channel: release-{{tigeraOperatorVersionShort}}
   installPlanApproval: Manual
   name: tigera-operator
   source: certified-operators
   sourceNamespace: openshift-marketplace
-  startingCSV: tigera-operator.{{operator_version}}
+  startingCSV: tigera-operator.{{tigeraOperator.version}}
 EOF
 ```
 
