--- a/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise_versioned_docs/version-3.15/networking/egress/egress-gateway-aws.mdx
@@ -774,6 +774,8 @@ spec:
               fieldPath: status.podIP
         # Optional: Used to specify IP tables backend (legacy or nft).
         # For example on RHEL9, nft can be used.
+        # As of v3.15.3, the egress gateway will attempt to autodetect 
+        # the correct value preferring `nft` if available.
         #- name: IPTABLES_BACKEND
         #  value: "legacy"
         securityContext:
@@ -912,7 +914,8 @@ EOF
   If set, the egress gateway pod will probe each external service periodically. If all probes fail then the egress
   gateway will report non-ready via its health port. `HTTP_PROBE_INTERVAL` controls the interval between probes.
   `HTTP_PROBE_TIMEOUT` controls the timeout before reporting non-ready if all probes are failing.
-- The `IPTABLES_BACKEND` environment variable may be set to `legacy` or `nft`.
+- The `IPTABLES_BACKEND` environment variable may be set to `legacy` or `nft`. As of v3.15.3, the egress gateway 
+  will attempt to autodetect the correct value preferring `nft` if available.
   The health port is used by:
 - The Kubernetes `readinessProbe` to expose the status of the egress gateway pod (and any ICMP/HTTP
   probes).
