Removes some more liquid

--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/windows-calico/quickstart.mdx
@@ -213,7 +213,7 @@ Note: if {{prodname}} is installed in kube-system, update the `namespace` in the
    ```
 
 1. Install {{prodnameWindows}} for your datastore using the default parameters or [customize installation parameters](#configure-installation-parameters).
-   The PowerShell script downloads {% if site.prodnameWindows == "Calico Enterprise for Windows" %}the {{prodnameWindows}} release binary, {% endif %}Kubernetes binaries, Windows utilities files, configures {{prodnameWindows}}, and starts the Calico service.
+   The PowerShell script downloads {{prodnameWindows}} release binary, Kubernetes binaries, Windows utilities files, configures {{prodnameWindows}}, and starts the Calico service.
 
    You do not need to pass a parameter if the default value of the parameter is correct for your cluster.
 
