--- a/calico/getting-started/openstack/requirements.mdx
+++ b/calico/getting-started/openstack/requirements.mdx
@@ -15,6 +15,6 @@ master or any previous Python 3 release, on any operating system, independently 
 deployment mechanism that is used to install it.
 
 However, we recommend using OpenStack Ussuri or later, and our active support and testing
-of {{prodname}} {{version}} with OpenStack is with Ussuri.
+of {{prodname}} {{version}} with OpenStack is with Yoga.
 
 <ReqsKernel />
