--- a/calico-cloud_versioned_docs/version-3.16/compliance/overview.mdx
+++ b/calico-cloud_versioned_docs/version-3.16/compliance/overview.mdx
@@ -97,7 +97,7 @@ The following sample manifest creates RBAC for three users: Paul, Candice and Da
 
 ```yaml
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-compliance-manage-report-config
 rules:
@@ -110,7 +110,7 @@ rules:
 
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-compliance-manage-report-config
 subjects:
@@ -124,7 +124,7 @@ roleRef:
 
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-compliance-list-download-all-reports
 rules:
@@ -137,7 +137,7 @@ rules:
 
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-compliance-list-download-all-reports
 subjects:
@@ -151,7 +151,7 @@ roleRef:
 
 ---
 kind: ClusterRole
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-compliance-list-download-dev-inventory
 rules:
@@ -169,7 +169,7 @@ rules:
 
 ---
 kind: ClusterRoleBinding
-apiVersion: rbac.authorization.k8s.io/v1beta1
+apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: tigera-compliance-list-download-dev-inventory
 subjects:
