[EV-3595] Fix tigera-admin to tigera-network-admin references

--- a/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/recommendations/policy-recommendations.mdx
@@ -27,7 +27,7 @@ traffic only from `ns1`, port 80, using TCP. All other ingress traffic is denied
 
 **Required**
 
-To enable/disable policy recommendations, you must have the **tigera-admin** role or permissions to the **Policy Recommendations** resource. 
+To enable/disable policy recommendations, you must have the **tigera-network-admin** role or permissions to the **Policy Recommendations** resource. 
 
 **Recommended**
 
