--- a/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
+++ b/calico_versioned_docs/version-3.25/operations/upgrading/kubernetes-upgrade.mdx
@@ -74,6 +74,12 @@ the output and then re-running the command without --dry-run to commit to the ch
 
 ### All other upgrades
 
+1. Apply the {{version}} CRDs:
+
+   ```bash
+   kubectl replace -f {{manifestsUrl}}/manifests/operator-crds.yaml
+   ```
+
 1. Run the helm upgrade:
 
    ```bash
