[EV-3612] Add PolicyRecommendation to CE upgrade with OpenShift

--- a/calico-enterprise/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-enterprise/openshift-upgrade.mdx
@@ -99,6 +99,18 @@ The steps differ based on your cluster type. If you are unsure of your cluster t
    EOF
    ```
 
+1. If your cluster is v3.16 or older, apply a new [PolicyRecommendation](../../../reference/installation/api.mdx#operator.tigera.io/v1.PolicyRecommendation)
+   CR to your cluster.
+
+   ```bash
+   oc apply -f - <<EOF
+   apiVersion: operator.tigera.io/v1
+   kind: PolicyRecommendation
+   metadata:
+     name: tigera-secure
+   EOF
+   ```
+
 1. You can now monitor the upgrade progress with the following command:
 
    ```bash
