--- a/calico-enterprise/getting-started/install-on-clusters/docker-enterprise.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/docker-enterprise.mdx
@@ -47,11 +47,13 @@ The geeky details of what you get:
 
 1. [Configure a storage class for {{prodname}}](../../operations/logstorage/create-storage.mdx).
 
-1. Configure Tigera operator role bindings for Docker EE.
+1. Configure Tigera operator and Calico CNI plugin role bindings for Docker EE.
 
    ```bash
    kubectl create clusterrolebinding tigera-operator-cluster-admin -n tigera-operator \
     --clusterrole cluster-admin --serviceaccount tigera-operator:tigera-operator
+   kubectl create clusterrolebinding calico-cni-plugin-cluster-admin -n calico-system \
+    --clusterrole cluster-admin --serviceaccount calico-system:calico-cni-plugin
    ```
 
 1. Install the Tigera operator and custom resource definitions.
