Update docs for calico-system default deny warnings

--- a/calico-enterprise/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
+++ b/calico-enterprise/getting-started/upgrading/upgrading-calico-to-calico-enterprise/upgrade-to-tsee-openshift.mdx
@@ -31,6 +31,10 @@ Your Kubernetes cluster must not be running in production. Operator-based upgrad
 
 If your cluster already has {{prodname}} installed, follow the [Upgrading {{prodname}} from an earlier release guide](../upgrading-enterprise/openshift-upgrade.mdx) instead.
 
+## Prepare your cluster for the upgrade
+
+Calico Enterprise creates default-deny policies for all Calico and Tigera namespaces, including calico-system. If you deploy workloads into the calico-system namespace, you must create policy that allows the required traffic for your workloads prior to upgrade.
+
 ## Upgrade Calico to {{prodname}}
 
 ### Before you begin
