document FeatureGates and BPFConnectTimeLoadBalancingWorkaround

--- a/calico/reference/felix/configuration.mdx
+++ b/calico/reference/felix/configuration.mdx
@@ -99,6 +99,13 @@ The full list of parameters which can be set is as follows.
 | `RouteSource`                       | `FELIX_ROUTESOURCE`                       | Where Felix gets is routing information from for VXLAN and the BPF dataplane. The CalicoIPAM setting is more efficient because it supports route aggregation, but it only works when Calico's IPAM or host-local IPAM is in use. Use the WorkloadIPs setting if you are using Calico's VXLAN or BPF dataplane and not using Calico IPAM or host-local IPAM. [Default: "CalicoIPAM"]                                                                                                                                                                                                                                                                                                                                              | 'CalicoIPAM', or 'WorkloadIPs'                                                                  |
 | `mtuIfacePattern`                   | `FELIX_MTUIFACEPATTERN`                   | Pattern used to discover the host's interface for MTU auto-detection. [Default: ^((en&#124;wl&#124;ww&#124;sl&#124;ib)[opsx]&#46;&#42;&#124;(eth&#124;wlan&#124;wwan)&#46;&#42;) ]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | regex                                                                                           |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        
 | `FeatureDetectOverride`             | `FELIX_FEATUREDETECTOVERRIDE`             | Is used to override the feature detection. Values are specified in a comma separated list with no spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=true,IPIPDeviceIsL3=true. "true" or "false" will force the feature, empty or omitted values are auto-detected. [Default: `""`]                                                                                                                                                                                                                                                                                                                                                                                                                | string                                                                                          |
+| `FeatureGates`			| `FELIX_FEATUREGATES`			| Is used to enable or disable tech-preview Calico features. Values are specified in a comma separated list with no spaces. This is used to enable features that are not fully production ready. Example; "AbC=enabled,XyZ=false" [Default: not set] | string
+
+#### Feature Gates
+
+* `BPFConnectTimeLoadBalancingWorkaround` - Use when connect-time loadblalancer (CTLB) is turned off or if you want to turn it off for UDP only. When CTLB is turned off, host networked processes cannot always reach services. This workaround makes sure that they can. When CTLB is turned on, UDP clients may get stuck sending traffic to endpoint that does not exist anymore. So CTLB needs to be turned off sometimes.
+	* `enabled` - when CTLB is turned off make sure that services are always accessible.
+	* `udp` - turns off CTLB for UDP only and makes sure that services are always accessible. Prefered setting to make sure that DNS works.
 
 ### etcd datastore configuration
 
