--- a/calico-enterprise/reference/component-resources/node/felix/configuration.mdx
+++ b/calico-enterprise/reference/component-resources/node/felix/configuration.mdx
@@ -100,6 +100,14 @@ The full list of parameters which can be set is as follows.
 | `TPROXYMode`                        | `FELIX_TPROXYMODE`                                                                                   | Sets transparent proxying mode. [Default: "Disabled"]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            | 'Disabled', 'Enabled'                                                                           |
 | `TPROXYPort`                        | `FELIX_TPROXYPORT`                                                                                   | What local ports is the proxied traffic sent to. [Default: `16001`]                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              | int                                                                                             |
 | `FeatureDetectOverride`             | `FELIX_FEATUREDETECTOVERRIDE`                                                                        | Is used to override the feature detection. Values are specified in a comma separated list with no spaces, example; "SNATFullyRandom=true,MASQFullyRandom=false,RestoreSupportsLock=true,IPIPDeviceIsL3=true. "true" or "false" will force the feature, empty or omitted values are auto-detected. [Default: `""`]                                                                                                                                                                                                                                                                                                                                                                                                                | string                                                                                          |
+| `FeatureGates`			| `FELIX_FEATUREGATES`			| Is used to enable or disable tech-preview Calico features. Values are specified in a comma separated list with no spaces. This is used to enable features that are not fully production ready. Example; "AbC=enabled,XyZ=false" [Default: not set] | string
+
+#### Feature Gates
+
+* `BPFConnectTimeLoadBalancingWorkaround` - Use when connect-time loadblalancer (CTLB) is turned off or if you want to turn it off for UDP only. When CTLB is turned off, host networked processes cannot always reach services. This workaround makes sure that they can. When CTLB is turned on, UDP clients may get stuck sending traffic to endpoint that does not exist anymore. So CTLB needs to be turned off sometimes.
+	* `enabled` - when CTLB is turned off make sure that services are always accessible.
+	* `udp` - turns off CTLB for UDP only and makes sure that services are always accessible. Prefered setting to make sure that DNS works.
+
 
 ### etcd datastore configuration
 
