Fix broken links

--- a/calico/network-policy/get-started/kubernetes-policy/kubernetes-network-policy.mdx
+++ b/calico/network-policy/get-started/kubernetes-policy/kubernetes-network-policy.mdx
@@ -185,4 +185,4 @@ spec:
 
 ## Above and beyond
 
-- [Kubernetes Network Policy API documentation](https://kubernetes.io/docs/reference/kubernetes-api/policy-resources/network-policy-v1/)
+- [Kubernetes Network Policy API documentation](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#PodSpec)
