--- a/calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/eks.mdx
+++ b/calico_versioned_docs/version-3.24/getting-started/kubernetes/managed-public-cloud/eks.mdx
@@ -45,7 +45,7 @@ The geeky details of what you get:
 will not be able to initiate network connections to {{prodname}} pods. (This is a general limitation of EKS's custom networking support,
 not specific to {{prodname}}.) As a workaround, trusted pods that require control plane nodes to connect to them, such as those implementing
 admission controller webhooks, can include `hostNetwork:true` in their pod spec. See the Kubernetes API
-[pod spec](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#podspec-v1-core)
+[pod spec](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#PodSpec)
 definition for more information on this setting.
 
 :::
