--- a/calico_versioned_docs/version-3.24/about/about-network-policy.mdx
+++ b/calico_versioned_docs/version-3.24/about/about-network-policy.mdx
@@ -74,7 +74,7 @@ more tightly with Kubernetes. However, this does not remove the need or value of
 
 ## Kubernetes network policy
 
-Kubernetes network policies are defined using the Kubernetes [NetworkPolicy](https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.21/#networkpolicy-v1-networking-k8s-io) resource.
+Kubernetes network policies are defined using the Kubernetes [NetworkPolicy](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#PodSpec) resource.
 
 The main features of Kubernetes network policies are:
 
