add missed terminology update in vnext wireguard doc

--- a/calico-enterprise/compliance/encrypt-cluster-pod-traffic.mdx
+++ b/calico-enterprise/compliance/encrypt-cluster-pod-traffic.mdx
@@ -239,7 +239,7 @@ EOF
 
 With the above command, Calico will not encrypt any of the pod traffic to or from node `my-node`.
 
-To enable encryption for IPv4 and IPv6 pod traffic on node `my-node` again, patch this node's FelixConfiguration (modify accordingly if only dealing with IPv4 or IPv6):
+To enable encryption for IPv4 and IPv6 inter-node pod traffic on node `my-node` again, patch this node's FelixConfiguration (modify accordingly if only dealing with IPv4 or IPv6):
 
 ```bash
 kubectl patch felixconfiguration node.my-node --type='merge' -p '{"spec":{"wireguardEnabled":true,"wireguardEnabledV6":true}}'
