--- a/calico/reference/felix/configuration.mdx
+++ b/calico/reference/felix/configuration.mdx
@@ -170,6 +170,7 @@ See the [HOWTO guide](../../operations/ebpf/enabling-ebpf.mdx) for step-by step 
 | BPFL3IfacePattern / <br/> FELIX_BPFL3IFACEPATTERN                                   | Allows to list tunnel devices like wireguard or vxlan (i.e., L3 devices) in addition to BPFDataIfacePattern. That is, tunnel interfaces not created by Calico, that Calico workload traffic flows over as well as any interfaces that handle incoming traffic to nodeports and services from outside the cluster.                                                                 | regular expression    | ""      |
 | BPFConnectTimeLoadBalancingEnabled / <br/> FELIX_BPFCONNECTTIMELOADBALANCINGENABLED | Controls whether Felix installs the connect-time load balancer. In the current release, the connect-time load balancer is required for the host to reach kubernetes services.                                                                                                                                                                                                     | true,false            | true    |
 | BPFExternalServiceMode / <br/> FELIX_BPFEXTERNALSERVICEMODE                         | Controls how traffic from outside the cluster to NodePorts and ClusterIPs is handled. In Tunnel mode, packet is tunneled from the ingress host to the host with the backing pod and back again. In DSR mode, traffic is tunneled to the host with the backing pod and then returned directly; this requires a network that allows direct return.                                  | Tunnel,DSR            | Tunnel  |
+| BPFDSROptoutCIDRs / <br/> FELIX_BPFDSROPTOUTCIDRS                                   | BPFDSROptoutCIDRs is a list of CIDRs that are excluded from DSR. That is, clients in those CIDRs will access nodeports as if BPFExternalServiceMode was set to Tunnel.                                                                                                                                                                                                            | string                | ""      |
 | BPFExtToServiceConnmark / <br/> FELIX_BPFEXTTOSERVICECONNMARK                       | Controls a 32bit mark that is set on connections from an external client to a local service. This mark allows us to control how packets of that connection are routed within the host and how is routing interpreted by RPF check.                                                                                                                                                | int                   | 0       |
 | BPFEnforceRPF / <br/> FELIX_BPFENFORCERPF                                           | Enforce RPF on all host interfaces with BPF programs regardless of what is the per-interfaces or global setting.                                                                                                                                                                                                                                                                  | Disabled,Strict,Loose | Strict  |
 | BPFKubeProxyIptablesCleanupEnabled / <br/> FELIX_BPFKUBEPROXYIPTABLESCLEANUPENABLED | Controls whether Felix will clean up the iptables rules created by the Kubernetes `kube-proxy`; should only be enabled if `kube-proxy` is not running.                                                                                                                                                                                                                            | true,false            | true    |
