WAF changes after testing

--- a/calico-enterprise_versioned_docs/version-3.16/threat/web-application-firewall.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/threat/web-application-firewall.mdx
@@ -85,18 +85,30 @@ kubectl patch felixconfiguration default --type='merge' -p '{"spec":{"policySync
 ### Enable WAF
 
 1. On the Manager UI, click **Threat Defense**, **Web Application Firewall**, **Configure Web Application Firewall**.
-2. Select the services you want WAF to inspect, and then click **Confirm Selections**.
+   :::note
+
+   You need to configure WAF only once. If you have done it before, you can ignore this step.
+
+   :::
+
+2. From the **Action** column, select **Enable** or **Disable** to respectively enable or disable WAF for each of the services.
+
     
-   <img
-    src='/img/calico-enterprise/waf-select-services.png'
+  <img
+    src='/img/calico-enterprise/waf-select-services-CE3.16.png'
     alt='WAF services'
     width='600'
   />
 
-3. On the **Web Application Firewall** page, you can verify that WAF is enabled for a service by locating the service and checking that the **Status** column says **Enabled**.
+3. On the Enable WAF window, a kubectl command appears.
 
-4. To make further changes to a service, click **Actions**, and then **Enable** or **Disable**.
+    <img
+    src='/img/calico-enterprise/waf-kubectl-copy-command-CE3.16.png'
+    alt='WAF services'
+    width='600'
+  />
 
+4. Copy the command and run it on a cluster node.
 
 ### View WAF events
 
