Add step to 'before you begin' regarding byo prometheus operator

--- a/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/kubernetes/helm.mdx
+++ b/calico-enterprise_versioned_docs/version-3.17/getting-started/install-on-clusters/kubernetes/helm.mdx
@@ -20,6 +20,10 @@ Helm charts are a way to package up an application for Kubernetes (similar to `a
 - `kubeconfig` is configured to work with your cluster (check by running `kubectl get nodes`)
 - [Credentials for the Tigera private registry and a license key](../calico-enterprise.mdx)
 
+**Optional**
+
+- If you bring your own Prometheus operator and omit the Tigera Prometheus operator from our Helm chart during installation, make sure that it is running before you install {{prodname}}.
+
 **Not Supported**
 
 - Multi-cluster management (mcm)
