Add NodeLocal DNSCache in cluster

--- a/calico-enterprise/operations/ebpf/install.mdx
+++ b/calico-enterprise/operations/ebpf/install.mdx
@@ -60,7 +60,7 @@ eBPF supports AKS with Calico CNI and {{prodname}} network policy. However, with
 :::
 
 **Unsupported features**
-
+- Using NodeLocal DNSCache in your cluster
 - Clusters with some eBPF nodes and some standard dataplane and/or Windows nodes
 - IPv6
 - Host endpoint `doNotTrack` policy (other policy types are supported)
